--- a/RelativePositioning.html
+++ b/RelativePositioning.html
@@ -11,7 +11,7 @@
 <body>
     <h1>CSS Positioning</h1>
     <hr>
-    <button><a href="11.CssPositioning.html">STATIC POSITIONING</a></button>
+    <button><a href="index.html">STATIC POSITIONING</a></button>
     <button><a href="RelativePositioning.html">RELATIVE POSITIONING</a></button>
     <button><a href="AbsolutePositioning.html">ABSOLUTE POSITION 1</a></button>
     <button><a href="AbsolutePosition_withUnpositionedAncestor.html">ABSOLUTE POSITION 2</a></button>
