--- a/AbsolutePositioning.html
+++ b/AbsolutePositioning.html
@@ -12,7 +12,7 @@
     <h1>CSS Positioning</h1>
     ABSOLUTE POSITIONING IS THE POSITION RELATIVE TO NEAREST POSITIONED ANCESTOR ,HERE WE HAVE A POSITIONED ANCESTOR THE DOTTED DIV.
     <hr>
-    <button><a href="11.CssPositioning.html">STATIC POSITIONING</a></button>
+    <button><a href="index.html">STATIC POSITIONING</a></button>
     <button><a href="RelativePositioning.html">RELATIVE POSITIONING</a></button>
     <button><a href="AbsolutePositioning.html">ABSOLUTE POSITION 1</a></button>
     <button><a href="AbsolutePosition_withUnpositionedAncestor.html">ABSOLUTE POSITION 2</a></button>
