--- a/AbsolutePosition_withUnpositionedAncestor.html
+++ b/AbsolutePosition_withUnpositionedAncestor.html
@@ -12,7 +12,7 @@
     <h1>CSS Positioning</h1>
     ABSOLUTE POSITIONING IS THE POSITION RELATIVE TO NEAREST POSITIONED ANCESTOR ,HERE WE DO NOT HAVE A POSITIONED ANCESTOR HENCE THE COLORED BOX GETS ITS POSITION ON TOP LEFT CORNER OF THE WEBPAGE
     <hr>
-    <button><a href="11.CssPositioning.html">STATIC POSITIONING</a></button>
+    <button><a href="index.html">STATIC POSITIONING</a></button>
     <button><a href="RelativePositioning.html">RELATIVE POSITIONING</a></button>
     <button><a href="AbsolutePositioning.html">ABSOLUTE POSITION 1</a></button>
     <button><a href="AbsolutePosition_withUnpositionedAncestor.html">ABSOLUTE POSITION 2</a></button>
